[package]
name = "bestkaomoji-com-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linya = "0.3.0"
md5 = "0.7.0"
rayon = "1.6.1"
reqwest = "0.11.13"
scraper = "0.14.0"
tokio = { version = "1.23.0", features = ["full"] }
